# BotSort-cpp

./: CMakeLists.txt  docker_run.sh
botsort/: CMakeLists.txt
botsort/include/: BoTSORT.h
botsort/src/: BoTSORT.cpp  KalmanFilter.cpp  KalmanFilterAccBased.cpp
config/: tracker.ini
examples/: CMakeLists.txt  botsort_tracking_example.cpp
yolotrack/: CMakeLists.txt  README.md  convert_pt_to_onnx.py
yolotrack/include/: ONNXRuntimeEngine.h  YOLODetector.h
yolotrack/src/: ONNXRuntimeEngine.cpp  YOLODetector.cpp  main.cpp
